Scaling on mobile fixed for image

--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ body, html {
 }
 
 #profilePic {
-	height: 25%;
+	width: 90%;
 	border-radius: 50%;
 	z-index: 100;
 	margin-top: 0px;
@@ -255,7 +255,7 @@ body, html {
   	z-index: 0;
   	opacity: 0.9;
   	border-style: solid;
-  	border-width: 7px;
+  	border-width: 0.5vw;
   	border-color: #877D3E;
 
 }
